--- a/packages/cui-checks/package.json
+++ b/packages/cui-checks/package.json
@@ -39,5 +39,8 @@
     "typescript": "^4.7.4",
     "webpack": "^5.89.0",
     "webpack-cli": "^4.9.1"
+  },
+  "dependencies": {
+    "@qualweb/cui-checks": "^0.1.0"
   }
 }
