--- a/packages/act-rules/tsconfig.json
+++ b/packages/act-rules/tsconfig.json
@@ -38,6 +38,6 @@
   },
   "include": [
     "src/**/*.ts",
-    "test/**/*.ts",
+    "test/**/*.ts", "../cui-checks/src/lib/Rule.object.ts",
   ],
 }
