--- a/packages/best-practices/tsconfig.json
+++ b/packages/best-practices/tsconfig.json
@@ -19,7 +19,7 @@
     "alwaysStrict": true /* Parse in strict mode and emit "use strict" for each source file. */,
 
     /* Module Resolution Options */
-    "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
+    "moduleResolution": "Node16",
 
     "types": ["node", "mocha"] /* Type declaration files to be included in compilation. */,
 
