--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -22,7 +22,7 @@
     "useUnknownInCatchVariables": false,
 
     /* Module Resolution Options */
-    "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
+    "moduleResolution": "Node16",
 
     "types": ["node", "mocha"] /* Type declaration files to be included in compilation. */,
 
