--- a/packages/counter/tsconfig.json
+++ b/packages/counter/tsconfig.json
@@ -25,7 +25,7 @@
     "noFallthroughCasesInSwitch": true /* Report errors for fallthrough cases in switch statement. */,
 
     /* Module Resolution Options */
-    "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
+    "moduleResolution": "Node16",
 
     "types": [
       "node",
