--- a/packages/crawler/tsconfig.json
+++ b/packages/crawler/tsconfig.json
@@ -4,6 +4,7 @@
     /* Basic Options */
     "target": "ESNext",
     "lib": ["ESNext", "DOM"],
+    "module": "Node16",
     "declaration": true /* Generates corresponding '.d.ts' file. */,
     "declarationMap": true /* Generates a sourcemap for each corresponding '.d.ts' file. */,
     "sourceMap": true /* Generates corresponding '.map' file. */,
@@ -27,7 +28,7 @@
     "noFallthroughCasesInSwitch": true /* Report errors for fallthrough cases in switch statement. */,
 
     /* Module Resolution Options */
-    "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
+    "moduleResolution": "Node16",
 
     "types": ["node", "mocha"] /* Type declaration files to be included in compilation. */,
   },
