--- a/packages/earl-reporter/tsconfig.json
+++ b/packages/earl-reporter/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     /* Basic Options */
     "target": "ESNext",
+    "module": "Node16",
     "declaration": true /* Generates corresponding '.d.ts' file. */,
     "declarationMap": true /* Generates a sourcemap for each corresponding '.d.ts' file. */,
     "sourceMap": true /* Generates corresponding '.map' file. */,
@@ -26,7 +27,7 @@
     "noFallthroughCasesInSwitch": true /* Report errors for fallthrough cases in switch statement. */,
 
     /* Module Resolution Options */
-    "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
+    "moduleResolution": "Node16",
 
     /* Allow import of JSON fixtures in unit tests. */
     "resolveJsonModule": true,
@@ -36,5 +37,9 @@
       "lodash.clonedeep",
       "mocha",
     ] /* Type declaration files to be included in compilation. */,
-  }
+  },
+  "include": [
+    "src/**/*.ts",
+    "test/**/*.ts",
+  ],
 }
