--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,7 +6,9 @@
   "files": [
     "dist/*"
   ],
-  "types": "dist/index.d.ts",
+  "exports": {
+    "types": "./dist/index.d.ts"
+  },
   "scripts": {
     "tsc": "tsc",
     "test": "mocha",
