fi(util): `franc-min` 6.x is ESM-only
We aren't ready for the transition and should *absolutely* communicate this to consumers before switching, as it could easily be a non-trivial amount of work to fix.

--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -61,7 +61,7 @@
     "webpack-cli": "^4.7.0"
   },
   "dependencies": {
-    "franc-min": "^6.2.0",
+    "franc-min": "5.0.0",
     "string-pixel-width": "^1.10.0"
   }
 }
