chore(util): remove "import" exports from package.json
The "import" fields are meant for ESM modules and we aren't compiling for that, yet.

--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -8,22 +8,18 @@
   ],
   "exports": {
     ".": {
-      "import": "./dist/util.bundle.js",
-      "require": "./dist/util.bundle.js",
+      "require": "./dist/__webpack/util.bundle.js",
       "types": "./dist/index.d.ts"
     },
     "./applicability": {
-      "import": "./dist/applicability/applicability.js",
       "require": "./dist/applicability/applicability.js",
       "types": "./dist/applicability/applicability.d.ts"
     },
     "./accessibilityUtils": {
-      "import": "./dist/accessibilityUtils/accessibilityUtils.js",
       "require": "./dist/accessibilityUtils/accessibilityUtils.js",
       "types": "./dist/accessibilityUtils/accessibilityUtils.d.ts"
     },
     "./domUtils": {
-      "import": "./dist/domUtils/domUtils.js",
       "require": "./dist/domUtils/domUtils.js",
       "types": "./dist/domUtils/domUtils.d.ts"
     }
