--- a/packages/qw-element/tsconfig.json
+++ b/packages/qw-element/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     /* Basic Options */
     "lib": ["DOM"],
+    "module": "Node16",
     "resolveJsonModule": true,
     "declaration": true /* Generates corresponding '.d.ts' file. */,
     "declarationMap": true /* Generates a sourcemap for each corresponding '.d.ts' file. */,
