--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -55,7 +55,7 @@
     "@types/mocha": "^10.0.6",
     "@types/node": "^16.4.1",
     "@types/set-value": "^4.0.3",
-    "chai": "^4.4.1",
+    "chai": "4.5.0",
     "eslint": "^8.56.0",
     "mocha": "^10.2.0",
     "prettier": "^3.1.1",
