--- a/packages/crawler/package.json
+++ b/packages/crawler/package.json
@@ -49,7 +49,7 @@
     "@types/koa__router": "^12.0.4",
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.12.12",
-    "chai": "^4.4.1",
+    "chai": "4.5.0",
     "eslint": "^8.56.0",
     "koa": "^2.15.0",
     "mocha": "^10.2.0",
