--- a/packages/earl-reporter/package.json
+++ b/packages/earl-reporter/package.json
@@ -44,7 +44,7 @@
     "@types/lodash.clonedeep": "^4.5.9",
     "@types/mocha": "^10.0.6",
     "@types/node": "^14.14.35",
-    "chai": "^4.4.1",
+    "chai": "4.5.0",
     "eslint": "^8.56.0",
     "esm": "^3.2.25",
     "mocha": "^10.2.0",
