--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -63,7 +63,7 @@
     "@types/mocha": "^10.0.6",
     "@types/node": "^15.6.1",
     "@types/string-pixel-width": "^1.10.3",
-    "chai": "^4.4.1",
+    "chai": "4.5.0",
     "copy-webpack-plugin": "^12.0.2",
     "css-select": "^5.1.0",
     "eslint": "^8.56.0",
