--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -42,6 +42,10 @@
   "license": "ISC",
   "dependencies": {
     "@qualweb/core": "0.7.71",
+    "@qualweb/act-rules": "0.6.37",
+    "@qualweb/best-practices": "0.6.18",
+    "@qualweb/wcag-techniques": "0.3.18",
+    "@qualweb/counter": "0.2.3",
     "@qualweb/earl-reporter": "0.4.6",
     "command-line-args": "^5.2.1",
     "command-line-usage": "^6.1.1",
