chore: update eslint configuration
Eslint should now be runnable again, but it's fairly slow. I've omitted it from the build process.
Also removed the "lint:fix" scripts.

--- a/packages/best-practices/package.json
+++ b/packages/best-practices/package.json
@@ -34,8 +34,7 @@
     "test:bp24": "mocha test/best-practices/QW-BP24.spec.mjs",
     "test:bp28": "mocha test/best-practices/QW-BP28.spec.mjs",
     "test:bp29": "mocha test/best-practices/QW-BP29.spec.mjs",
-    "lint": "eslint src --ext .ts",
-    "lint:fix": "eslint src --ext .ts --fix",
+    "lint": "eslint .",
     "format": "prettier src/**/*.ts --write",
     "prebuild": "rimraf prebuild && tsc --build tsconfig.prod.json",
     "build": "rimraf dist && webpack",
@@ -67,7 +66,6 @@
     "@types/mocha": "^10.0.6",
     "@types/node": "^16.11.12",
     "chai": "4.5.0",
-    "eslint": "^8.56.0",
     "mocha": "^10.2.0",
     "prettier": "^3.1.1",
     "puppeteer": "^22.12.1",
