--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -13,8 +13,7 @@
     "tsc": "tsc",
     "test": "mocha",
     "prebuild": "rimraf dist",
-    "lint": "eslint src --ext .ts",
-    "lint:fix": "eslint src --ext .ts --fix",
+    "lint": "eslint .",
     "format": "prettier src/**/*.ts --write",
     "build": "tsc --build tsconfig.prod.json",
     "typedoc": "typedoc --out docs src/index.ts",
@@ -41,12 +40,12 @@
   "author": "João Vicente",
   "license": "ISC",
   "dependencies": {
-    "@qualweb/core": "0.7.71",
     "@qualweb/act-rules": "0.6.37",
     "@qualweb/best-practices": "0.6.18",
-    "@qualweb/wcag-techniques": "0.3.18",
+    "@qualweb/core": "0.7.71",
     "@qualweb/counter": "0.2.3",
     "@qualweb/earl-reporter": "0.4.6",
+    "@qualweb/wcag-techniques": "0.3.18",
     "command-line-args": "^5.2.1",
     "command-line-usage": "^6.1.1",
     "log-update": "^4.0.0",
@@ -60,7 +59,6 @@
     "@types/node": "^16.4.1",
     "@types/set-value": "^4.0.3",
     "chai": "4.5.0",
-    "eslint": "^8.56.0",
     "mocha": "^10.2.0",
     "prettier": "^3.1.1",
     "rimraf": "^5.0.5",
