--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -42,8 +42,7 @@
     "test:locale": "mocha test/locale.spec.mjs",
     "test:log": "mocha test/log.spec.mjs",
     "prebuild": "rimraf dist",
-    "lint": "eslint src --ext .ts",
-    "lint:fix": "eslint src --ext .ts --fix",
+    "lint": "eslint .",
     "format": "prettier src/**/*.ts --write",
     "build": "tsc --build tsconfig.prod.json",
     "docs": "typedoc --out docs src/index.ts",
@@ -106,7 +105,6 @@
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.12.12",
     "chai": "4.5.0",
-    "eslint": "^9.3.0",
     "mocha": "^10.2.0",
     "node-fetch": "^2.6.7",
     "prettier": "^3.1.1",
