--- a/packages/crawler/package.json
+++ b/packages/crawler/package.json
@@ -11,8 +11,7 @@
     "test": "mocha",
     "test:url": "mocha test/url.spec.ts",
     "tsc": "tsc",
-    "lint": "eslint src --ext .ts",
-    "lint:fix": "eslint src --ext .ts --fix",
+    "lint": "eslint .",
     "format": "prettier src/**/*.ts --write",
     "prebuild": "rimraf dist",
     "build": "tsc --build tsconfig.prod.json",
@@ -50,7 +49,6 @@
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.12.12",
     "chai": "4.5.0",
-    "eslint": "^8.56.0",
     "koa": "^2.15.0",
     "mocha": "^10.2.0",
     "prettier": "^3.1.1",
