--- a/packages/qw-element/package.json
+++ b/packages/qw-element/package.json
@@ -11,8 +11,7 @@
     "tsc": "tsc",
     "test": "mocha --require esm",
     "prebuild": "rimraf dist",
-    "lint": "eslint src --ext .ts",
-    "lint:fix": "eslint src --ext .ts --fix",
+    "lint": "eslint .",
     "format": "prettier src/**/*.ts --write",
     "build": "npm run prebuild && tsc --build tsconfig.prod.json",
     "docs": "typedoc --out docs src/index.ts",
@@ -40,7 +39,6 @@
     "@types/mocha": "^10.0.6",
     "@types/node": "^16.4.0",
     "chai": "4.5.0",
-    "eslint": "^8.56.0",
     "esm": "^3.2.25",
     "mocha": "^10.2.0",
     "prettier": "^3.1.1",
