--- a/packages/wcag-techniques/package.json
+++ b/packages/wcag-techniques/package.json
@@ -16,8 +16,7 @@
     "test:t33": "mocha test/techniques/QW-WCAG-T33.spec.mjs",
     "test:t34": "mocha test/techniques/QW-WCAG-T34.spec.mjs",
     "test:t35": "mocha test/techniques/QW-WCAG-T35.spec.mjs",
-    "lint": "eslint src --ext .ts",
-    "lint:fix": "eslint src --ext .ts --fix",
+    "lint": "eslint .",
     "format": "prettier src/**/*.ts --write",
     "prebuild": "rimraf prebuild && tsc --build tsconfig.prod.json",
     "build": "rimraf dist && webpack",
@@ -51,7 +50,6 @@
     "@types/mocha": "^10.0.6",
     "@types/node": "^17.0.8",
     "chai": "4.5.0",
-    "eslint": "^8.56.0",
     "mocha": "^10.2.0",
     "prettier": "^3.1.1",
     "puppeteer": "^22.12.1",
