--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -14,8 +14,7 @@
     "test:url": "mocha test/url.spec.ts",
     "validate:rules": "node validate-rules.js",
     "compile:rules": "node compile-rules.js",
-    "lint": "eslint src --ext .ts",
-    "lint:fix": "eslint src --ext .ts --fix",
+    "lint": "eslint .",
     "format": "prettier src/**/*.ts --write",
     "prebuild": "npm run validate:rules && rimraf prebuild && tsc --build tsconfig.prod.json",
     "build": "rimraf dist && webpack",
@@ -47,7 +46,6 @@
     "@types/node-fetch": "^2.6.11",
     "ajv": "^6.12.6",
     "chai": "4.5.0",
-    "eslint": "^8.56.0",
     "mocha": "^10.2.0",
     "node-fetch": "^2.6.7",
     "prettier": "^3.1.1",
