--- a/packages/counter/package.json
+++ b/packages/counter/package.json
@@ -10,8 +10,7 @@
   "scripts": {
     "tsc": "tsc",
     "test": "mocha test/counter.spec.ts",
-    "lint": "eslint src --ext .ts",
-    "lint:fix": "eslint src --ext .ts --fix",
+    "lint": "eslint .",
     "format": "prettier src/**/*.ts --write",
     "prebuild": "npm run format && rimraf prebuild && tsc --build tsconfig.prod.json",
     "build": "npm run prebuild && rimraf dist && webpack",
@@ -44,7 +43,6 @@
     "@types/mocha": "^10.0.6",
     "@types/node": "^14.14.37",
     "chai": "4.5.0",
-    "eslint": "^8.56.0",
     "esm": "^3.2.25",
     "mocha": "^10.2.0",
     "prettier": "^3.1.1",
