--- a/packages/earl-reporter/package.json
+++ b/packages/earl-reporter/package.json
@@ -10,8 +10,7 @@
   "scripts": {
     "tsc": "tsc",
     "test": "mocha",
-    "lint": "eslint src --ext .ts",
-    "lint:fix": "eslint src --ext .ts --fix",
+    "lint": "eslint .",
     "format": "prettier src/**/*.ts --write",
     "prebuild": "rimraf dist",
     "build": "tsc --build tsconfig.prod.json",
@@ -45,7 +44,6 @@
     "@types/mocha": "^10.0.6",
     "@types/node": "^14.14.35",
     "chai": "4.5.0",
-    "eslint": "^8.56.0",
     "esm": "^3.2.25",
     "mocha": "^10.2.0",
     "prettier": "^3.1.1",
