--- a/packages/qw-page/package.json
+++ b/packages/qw-page/package.json
@@ -10,8 +10,7 @@
   "scripts": {
     "tsc": "tsc",
     "test": "mocha",
-    "lint": "eslint src --ext .ts",
-    "lint:fix": "eslint src --ext .ts --fix",
+    "lint": "eslint .",
     "format": "prettier src/**/*.ts --write",
     "prebuild": "rimraf prebuild  && tsc --build tsconfig.prod.json",
     "build": "rimraf dist && webpack",
@@ -37,7 +36,6 @@
     "@tsconfig/recommended": "^1.0.3",
     "@types/mocha": "^10.0.6",
     "chai": "4.5.0",
-    "eslint": "^8.56.0",
     "mocha": "^10.2.0",
     "prettier": "^3.1.1",
     "puppeteer": "^22.12.1",
