--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -31,8 +31,7 @@
     "test:ANameTestWiki": "mocha --spec=test/ANameTestWiki.spec.ts",
     "test:svg": "mocha --spec=test/ANameSVGTest.spec.ts",
     "test:elementHidden": "mocha --spec=test/elementHidden.spec.ts",
-    "lint": "eslint src --ext .ts",
-    "lint:fix": "eslint src --ext .ts --fix",
+    "lint": "eslint .",
     "format": "prettier src/**/*.ts --write",
     "prebuild": "rimraf prebuild && tsc --build tsconfig.prod.json",
     "build": "rimraf dist && npm run prebuild && webpack",
@@ -66,7 +65,6 @@
     "chai": "4.5.0",
     "copy-webpack-plugin": "^12.0.2",
     "css-select": "^5.1.0",
-    "eslint": "^8.56.0",
     "esm": "^3.2.25",
     "mocha": "^10.2.0",
     "prettier": "^3.1.1",
