--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -2,11 +2,18 @@
   "name": "@qualweb/act-rules",
   "version": "0.6.37",
   "description": "ACT rules module for qualweb web accessibility evaluator",
-  "main": "dist/act.bundle.js",
   "files": [
     "dist/*"
-  ],
-  "types": "prebuild/index.d.ts",
+  ],  
+  "exports": {
+    ".": {
+      "require": "./dist/__webpack/act.bundle.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./lib/*": {
+      "require": "./dist/lib/*"
+    }
+  },
   "scripts": {
     "tsc": "tsc",
     "test": "mocha",
@@ -16,8 +23,8 @@
     "compile:rules": "node compile-rules.js",
     "lint": "eslint .",
     "format": "prettier src/**/*.ts --write",
-    "prebuild": "npm run validate:rules && rimraf prebuild && tsc --build tsconfig.prod.json",
-    "build": "rimraf dist && webpack",
+    "prebuild": "npm run validate:rules",
+    "build": "rimraf dist && tsc --build tsconfig.prod.json && webpack",
     "prepublishOnly": "npm run build"
   },
   "keywords": [
