--- a/packages/act-rules/tsconfig.json
+++ b/packages/act-rules/tsconfig.json
@@ -4,7 +4,7 @@
     /* Basic Options */
     "module": "Node16",
     "resolveJsonModule": true,
-    "outDir": "./prebuild" /* Redirect output structure to the directory. */,
+    "outDir": "./dist" /* Redirect output structure to the directory. */,
     "rootDir": "." /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */,
     "removeComments": true /* Do not emit comments to output. */,
     "declaration": true,
