--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -48,6 +48,7 @@
     "@qualweb/wcag-techniques": "0.3.18",
     "command-line-args": "^5.2.1",
     "command-line-usage": "^6.1.1",
+    "commander": "^12.1.0",
     "log-update": "^4.0.0",
     "set-value": "^4.1.0"
   },
@@ -63,6 +64,7 @@
     "prettier": "^3.1.1",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
     "typedoc": "^0.26.10",
     "typescript": "^5.6.3"
   }
