build(wcag-techniques): update build configuration to keep rebuild results, too
This means exporting the non-bundled version of the code (might be easier to use for non-browser environments) as well as the techniques.json file (which contains metadata about supported/known techniques).

This mirrors similar changes in @qualweb/act-rules

--- a/packages/wcag-techniques/package.json
+++ b/packages/wcag-techniques/package.json
@@ -3,10 +3,15 @@
   "version": "0.3.18",
   "description": "Implementation of the WCAG 2.1 techniques",
   "main": "dist/wcag.bundle.js",
-  "files": [
-    "dist/*"
-  ],
-  "types": "prebuild/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/__webpack/wcag.bundle.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./lib/*": {
+      "require": "./dist/lib/*"
+    }
+  },
   "scripts": {
     "tsc": "tsc",
     "test": "mocha",
@@ -18,8 +23,7 @@
     "test:t35": "mocha test/techniques/QW-WCAG-T35.spec.mjs",
     "lint": "eslint .",
     "format": "prettier src/**/*.ts --write",
-    "prebuild": "rimraf prebuild && tsc --build tsconfig.prod.json",
-    "build": "rimraf dist && webpack",
+    "build": "rimraf dist && tsc --build tsconfig.prod.json && webpack",
     "prepublishOnly": "npm run build"
   },
   "homepage": "https://github.com/qualweb/wcag-techniques#readme",
