feat(wcag-techniques): export `WcagTechniquesModule` as separate subpath
This is mostly to address an issue with importing the barrel file from non-browser environments. This should probably be addressed more generally (avoid using `window` in any code that gets run simply on import)

--- a/packages/wcag-techniques/package.json
+++ b/packages/wcag-techniques/package.json
@@ -12,6 +12,10 @@
     },
     "./lib/*": {
       "require": "./dist/lib/*"
+    },
+    "./WcagTechniquesModule": {
+      "require": "./dist/WcagTechniquesModule.js",
+      "types": "./dist/WcagTechniquesModule.d.ts"
     }
   },
   "scripts": {
