--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -16,7 +16,6 @@
     "lint": "eslint .",
     "format": "prettier src/**/*.ts --write",
     "build": "tsc --build tsconfig.prod.json",
-    "typedoc": "typedoc --out docs src/index.ts",
     "prepublishOnly": "npm run build"
   },
   "keywords": [
@@ -47,21 +46,17 @@
     "@qualweb/earl-reporter": "0.4.6",
     "@qualweb/wcag-techniques": "0.3.22",
     "commander": "^12.1.0",
-    "log-update": "^4.0.0",
-    "set-value": "^4.1.0"
+    "log-update": "^4.0.0"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.3",
     "@types/mocha": "^10.0.6",
     "@types/node": "^16.4.1",
-    "@types/set-value": "^4.0.3",
     "chai": "4.5.0",
     "mocha": "^10.2.0",
     "prettier": "^3.1.1",
     "rimraf": "^5.0.5",
-    "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
-    "typedoc": "^0.26.10",
     "typescript": "^5.6.3"
   }
 }
