--- a/packages/best-practices/package.json
+++ b/packages/best-practices/package.json
@@ -43,7 +43,8 @@
     "test:bp29": "mocha test/best-practices/QW-BP29.spec.mjs",
     "lint": "eslint .",
     "format": "prettier src/**/*.ts --write",
-    "build": "rimraf dist && tsc --build tsconfig.prod.json && webpack",
+    "clean": "rimraf dist",
+    "build": "tsc --build tsconfig.prod.json && webpack",
     "prepublishOnly": "npm run build"
   },
   "homepage": "https://github.com/qualweb/best-practices#readme",
