--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -44,6 +44,7 @@
     "prebuild": "rimraf dist",
     "lint": "eslint .",
     "format": "prettier src/**/*.ts --write",
+    "clean": "rimraf dist",
     "build": "tsc --build tsconfig.prod.json",
     "docs": "typedoc --out docs src/index.ts",
     "prepublishOnly": "npm run build"
