--- a/packages/crawler/package.json
+++ b/packages/crawler/package.json
@@ -13,7 +13,7 @@
     "tsc": "tsc",
     "lint": "eslint .",
     "format": "prettier src/**/*.ts --write",
-    "prebuild": "rimraf dist",
+    "clean": "rimraf dist",
     "build": "tsc --build tsconfig.prod.json",
     "prepublishOnly": "npm run build"
   },
