--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -33,8 +33,8 @@
     "test:elementHidden": "mocha --spec=test/elementHidden.spec.ts",
     "lint": "eslint .",
     "format": "prettier src/**/*.ts --write",
-    "prebuild": "rimraf prebuild && tsc --build tsconfig.prod.json",
-    "build": "rimraf dist && npm run prebuild && webpack",
+    "clean": "rimraf dist",
+    "build": "tsc --build tsconfig.prod.json && webpack",
     "docs": "typedoc --out docs src/index.ts",
     "prepublishOnly": "npm run build"
   },
