--- a/packages/wcag-techniques/package.json
+++ b/packages/wcag-techniques/package.json
@@ -29,7 +29,8 @@
     "test:t35": "mocha test/techniques/QW-WCAG-T35.spec.mjs",
     "lint": "eslint .",
     "format": "prettier src/**/*.ts --write",
-    "build": "rimraf dist && tsc --build tsconfig.prod.json && webpack",
+    "clean": "rimraf dist",
+    "build": "tsc --build tsconfig.prod.json && webpack",
     "prepublishOnly": "npm run build"
   },
   "homepage": "https://github.com/qualweb/wcag-techniques#readme",
