ci: update snapshot release job step
Shouldn't need to build (this is done in a previous step), and added --no-git-tag. I'm not sure git tags are useful for snapshot releases.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,6 +55,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           echo //registry.npmjs.org/:_authToken=${NPM_TOKEN} > .npmrc
-          npm -ws run build
           npx changeset version --snapshot develop
-          npx changeset publish --tag develop
+          npx changeset publish --tag develop --no-git-tag
