--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -19,6 +19,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      # Disable AppArmor to allow Chrome/Puppeteer to run in the container.
+      # Ripped from https://github.com/puppeteer/puppeteer/blob/main/.github/workflows/daily.yml
+      # See also: https://github.com/puppeteer/puppeteer/blob/main/docs/troubleshooting.md
+      - name: Disable AppArmor
+        run: echo 0 | sudo tee /proc/sys/kernel/apparmor_restrict_unprivileged_userns
+
       - name: Setup (cache, dependencies)
         uses: ./.github/actions/install_and_cache_dependencies
 
