--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -39,7 +39,8 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/qualweb/act-rules.git"
+    "url": "git+https://github.com/qualweb/qualweb.git",
+    "directory": "packages/act-rules"
   },
   "author": "João Vicente",
   "license": "ISC",
