--- a/packages/earl-reporter/package.json
+++ b/packages/earl-reporter/package.json
@@ -31,7 +31,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/qualweb/earl-reporter.git"
+    "url": "git+https://github.com/qualweb/qualweb.git",
+    "directory": "packages/earl-reporter"
   },
   "engines": {
     "node": ">=18.0.0"
