--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -44,7 +44,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/qualweb/util.git"
+    "url": "git+https://github.com/qualweb/qualweb.git",
+    "directory": "packages/util"
   },
   "keywords": [
     "qualweb",
