--- a/packages/qw-page/package.json
+++ b/packages/qw-page/package.json
@@ -17,7 +17,7 @@
     "docs": "typedoc --out docs src/index.ts",
     "prepublishOnly": "npm run build"
   },
-  "homepage": "https://github.com/qualweb/qw-page#readme",
+  "homepage": "https://github.com/qualweb/qualweb/blob/main/packages/qw-page",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/qualweb/qualweb.git",
