--- a/packages/counter/package.json
+++ b/packages/counter/package.json
@@ -17,7 +17,7 @@
     "build": "tsc --build tsconfig.prod.json && webpack",
     "prepublishOnly": "npm run build"
   },
-  "homepage": "https://github.com/qualweb/counter#readme",
+  "homepage": "https://github.com/qualweb/qualweb/blob/main/packages/counter",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/qualweb/qualweb.git",
