--- a/packages/cui-checks/package.json
+++ b/packages/cui-checks/package.json
@@ -27,6 +27,7 @@
     "build": "tsc --build tsconfig.prod.json && webpack",
     "prepublishOnly": "npm run build"
   },
+  "homepage": "https://github.com/qualweb/qualweb/blob/main/packages/cui-checks",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/qualweb/qualweb.git",
