--- a/packages/wcag-techniques/package.json
+++ b/packages/wcag-techniques/package.json
@@ -33,7 +33,7 @@
     "build": "tsc --build tsconfig.prod.json && webpack",
     "prepublishOnly": "npm run build"
   },
-  "homepage": "https://github.com/qualweb/wcag-techniques#readme",
+  "homepage": "https://github.com/qualweb/qualweb/blob/main/packages/wcag-techniques",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/qualweb/qualweb.git",
