--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -62,7 +62,7 @@
     "directory": "packages/core"
   },
   "bugs": {
-    "url": "https://github.com/qualweb/core/issues",
+    "url": "https://github.com/qualweb/qualweb/issues",
     "email": "qualweb@fc.ul.pt"
   },
   "author": {
