--- a/packages/cui-checks/package.json
+++ b/packages/cui-checks/package.json
@@ -33,6 +33,9 @@
     "url": "git+https://github.com/qualweb/qualweb.git",
     "directory": "packages/cui-checks"
   },
+  "bugs": {
+    "url": "https://github.com/qualweb/qualweb/issues"
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
