--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -40,7 +40,7 @@
   },
   "homepage": "https://github.com/qualweb/qualweb/blob/main/packages/util",
   "bugs": {
-    "url": "https://github.com/qualweb/util/issues"
+    "url": "https://github.com/qualweb/qualweb/issues"
   },
   "repository": {
     "type": "git",
