fix(exports): change exports in package.json file to work in projects with type module set

--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -7,11 +7,11 @@
   ],
   "exports": {
     ".": {
-      "require": "./dist/__webpack/act.bundle.js",
+      "default": "./dist/__webpack/act.bundle.js",
       "types": "./dist/index.d.ts"
     },
     "./lib/*": {
-      "require": "./dist/lib/*"
+      "default": "./dist/lib/*"
     }
   },
   "scripts": {
