--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,23 +9,23 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "require": "./dist/index.js"
+      "default": "./dist/index.js"
     },
     "./evaluation": {
       "types": "./dist/lib/evaluation/index.d.ts",
-      "require": "./dist/lib/evaluation/index.js"
+      "default": "./dist/lib/evaluation/index.js"
     },
     "./evaluation/*": {
       "types": "./dist/lib/evaluation/*.d.ts",
-      "require": "./dist/lib/evaluation/*.js"
+      "default": "./dist/lib/evaluation/*.js"
     },
     "./lib": {
       "types": "./dist/lib/index.d.ts",
-      "require": "./dist/lib/index.js"
+      "default": "./dist/lib/index.js"
     },
     "./locale": {
       "types": "./dist/lib/i18n/index.d.ts",
-      "require": "./dist/lib/i18n/index.js"
+      "default": "./dist/lib/i18n/index.js"
     }
   },
   "scripts": {
