--- a/packages/cui-checks/package.json
+++ b/packages/cui-checks/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "tsc": "tsc",
-    "test": "mocha",
+    "test": "mocha --require ts-node/register  --tsconfig ./tsconfig.test.json",
     "lint": "eslint",
     "format": "prettier src/**/*.ts --write",
     "clean": "rimraf dist",
@@ -44,17 +44,42 @@
     "@qualweb/qw-page": "0.3.2",
     "@qualweb/util": "0.6.2",
     "@tsconfig/recommended": "^1.0.3",
+    "@types/hyphen": "^1.6.7",
+    "@types/intl": "^1.2.2",
+    "@types/luxon": "^3.6.2",
     "@types/mocha": "^10.0.6",
-    "@types/node": "^16.11.11",
+    "@types/node": "^16.18.126",
     "@types/node-fetch": "^2.6.11",
+    "@types/sinon": "^17.0.3",
     "chai": "^4.4.1",
     "mocha": "^10.2.0",
+    "nyc": "^17.1.0",
     "prettier": "^3.1.1",
     "puppeteer": "^22.12.1",
     "rimraf": "^5.0.5",
+    "sinon": "^19.0.2",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^4.7.4",
     "webpack": "^5.89.0",
     "webpack-cli": "^4.9.1"
+  },
+  "dependencies": {
+    "@kaciras/deasync": "^1.1.0",
+    "@langchain/ollama": "^0.2.0",
+    "@microsoft/recognizers-text-suite": "^1.3.1",
+    "@types/langdetect": "^0.2.2",
+    "date-fns": "^4.1.0",
+    "hyphen": "^1.10.6",
+    "install": "^0.13.0",
+    "langchain": "^0.3.15",
+    "level": "^9.0.0",
+    "locale-currency": "^0.0.4",
+    "luxon": "^3.6.1",
+    "npm": "^11.1.0",
+    "ollama": "^0.5.13",
+    "syllable": "^5.0.1",
+    "syllable-pt": "^1.0.4",
+    "tinyld": "^1.3.4"
   }
 }
