add packages to deranged npm org

--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@qualweb/act-rules",
-  "version": "0.7.5",
+  "name": "@deranged/qualweb-act-rules",
+  "version": "0.7.6",
   "description": "ACT rules module for qualweb web accessibility evaluator",
   "files": [
     "dist/*"
