--- a/packages/best-practices/package.json
+++ b/packages/best-practices/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@qualweb/best-practices",
+  "name": "@deranged/qualweb-best-practices",
   "version": "0.7.7",
   "description": "QualWeb best practices",
   "files": [
