--- a/packages/cui-checks/package.json
+++ b/packages/cui-checks/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@qualweb/cui-checks",
+  "name": "@deranged/qualweb-cui-checks",
   "version": "0.3.1",
   "description": "Accessibility tests for conversational user interfaces",
   "files": [
