--- a/packages/qw-page/package.json
+++ b/packages/qw-page/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@qualweb/qw-page",
+  "name": "@deranged/qualweb-qw-page",
   "version": "0.3.2",
   "description": "Utilities module for qualweb",
   "main": "dist/qw-page.bundle.js",
