--- a/packages/crawler/package.json
+++ b/packages/crawler/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@qualweb/crawler",
+  "name": "@deranged/qualweb-crawler",
   "version": "0.4.2",
   "description": "Webpage crawler for qualweb",
   "main": "dist/index.js",
