--- a/packages/earl-reporter/package.json
+++ b/packages/earl-reporter/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@qualweb/earl-reporter",
+  "name": "@deranged/qualweb-earl-reporter",
   "version": "0.5.6",
   "description": "Qualweb earl reporter",
   "main": "dist/index.js",
