--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,9 +69,17 @@ jobs:
 
       - name: Publish with OIDC
         if: github.ref_name == 'main' && steps.changesets.outputs.hasChangesets == 'false'
+        env:
+          # Tell npm we're in CI and should use OIDC
+          CI: true
         run: |
           # Remove .npmrc that changesets/action created
           rm -f ~/.npmrc .npmrc
+
+          # Verify OIDC environment variables are available
+          echo "Checking OIDC environment..."
+          echo "ACTIONS_ID_TOKEN_REQUEST_URL: ${ACTIONS_ID_TOKEN_REQUEST_URL:+present}"
+          echo "ACTIONS_ID_TOKEN_REQUEST_TOKEN: ${ACTIONS_ID_TOKEN_REQUEST_TOKEN:+present}"
 
           # Run our custom publish script that properly handles OIDC
           npm run release
@@ -98,7 +106,7 @@ jobs:
         run: |
           npx changeset version --snapshot develop
 
-          # Publish packages manually with explicit provenance flag
+          # Publish packages - provenance is automatic with OIDC
           for package in packages/*/package.json; do
             dir=$(dirname "$package")
             name=$(node -p "require('./$package').name")
@@ -111,7 +119,7 @@ jobs:
             if npm view "$name@$version" version 2>/dev/null; then
               echo "  Skipping $name@$version (already published)"
             else
-              npm publish --tag develop --provenance --access public
+              npm publish --tag develop --access public
             fi
 
             cd - > /dev/null
